# assignment-reminder

./: .env.napcat.example  .gitignore  README.md  pyproject.toml
app/: assignments.py  children.py  database.py  main.py  qq_sender.py  reminders.py  schemas.py
app/static/: app.js  index.html  styles.css
docs/plans/: 2026-06-10-assignment-reminder-mvp-design.md  2026-06-10-assignment-reminder-mvp-implementation.md  2026-06-14-qq-onebot-integration-design.md  2026-06-14-qq-onebot-integration-implementation.md
scripts/: start-napcat-onebot.sh
tests/: test_assignments_api.py  test_children_api.py  test_database.py  test_health.py  test_qq_sender.py  test_reminders.py
